php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #49855 import_request_variables always return false in any codition.
Submitted: 2009-10-13 02:16 UTC Modified: 2009-10-15 12:27 UTC
From: easyeagel at gmx dot com Assigned:
Status: Closed Package: HTTP related
PHP Version: 5.2.11 OS: Linux
Private report: No CVE-ID: None
 [2009-10-13 02:16 UTC] easyeagel at gmx dot com
Description:
------------
the import_request_variables always return false in any condition.

Reproduce code:
---------------
---
From manual page: function.import-request-variables#Return Values
---
	
	if(import_request_variables('p', 'post_'))
	{
		echo "unimport the request<br/>";
		phpinfo();
	}
	
	if(isset($post_username))
	{
		echo "<strong>", $post_username, "</strong><br/>";
	}
	
	if(isset($post_email))
	{
		echo "<strong>", $post_email, "</strong><br/>";
	}
	
	if(isset($post_message))
	{
		echo "<strong>", $post_message, "</strong>";
	}

Expected result:
----------------
I think the import_request_varibles return true

Actual result:
--------------
it return false, and return false anytime, if I run php5 in command line or in apache.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-10-13 10:55 UTC] sjoerd@php.net
Actually, it seems to return null, not false.
 [2009-10-14 08:57 UTC] sjoerd@php.net
Patch: http://pastebin.com/f236dcf35
 [2009-10-15 12:26 UTC] svn@php.net
Automatic comment from SVN on behalf of iliaa
Revision: http://svn.php.net/viewvc/?view=revision&revision=289666
Log: Fixed bug #49855 (import_request_variables() always returns NULL).
 [2009-10-15 12:27 UTC] iliaa@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2009-10-15 14:10 UTC] svn@php.net
Automatic comment from SVN on behalf of pajoye
Revision: http://svn.php.net/viewvc/?view=revision&revision=289669
Log: - Merge: - #49855 ^# ^author ^date ^msg ^merge^
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 20:00:01 2026 UTC