Fixed bug #49855 (import_request_variables() always returns NULL).